--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,28 @@
     <div>
         <!-- HEADER -->
 
+
+        <!-- <header class="portfolio-header header-section">
+            <div class="flex-block container">
+                <nav class="nav-section">
+                    <a href="./index.html" class="logo-header link">Web<span class="accent-logo-heder">Studio</span></a>
+                    <ul class="list nav-list">
+                        <li class="list-item"><a href="./index.html" class="link-header link">Studio</a></li>
+                        <li class="list-item"><a href="./portfolio.html" class="link-header active  link">Portfolio</a>
+                        </li>
+                        <li class="list-item"><a href="" class="link-header link">Contacts</a></li>
+                    </ul>
+                </nav>
+                <address class="address">
+                    <ul class="list address-list">
+                        <li><a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a></li>
+                        <li> <a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a></li>
+                    </ul>
+                </address>
+            </div>
+        </header> -->
+
+
         <header class="header-section">
             <div class="flex-block container">
                 <nav class="nav-section">
