--- a/index.html
+++ b/index.html
@@ -23,14 +23,7 @@
             <div class="flex-block container">
                 <nav class="nav-section">
                     <a href="./index.html" class="logo-header link">Web<span class="accent-logo-heder">Studio</span></a>
-                    <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-                        <svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20"
-                            xmlns="://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                                clip-rule="evenodd"></path>
-                        </svg>
-                    </button>
+
                     <ul class="list nav-list">
                         <li class="list-item"><a href="./index.html" class="active link-header link">Studio</a></li>
                         <li class="list-item"><a href="./portfolio.html" class="link-header link">Portfolio</a></li>
@@ -43,6 +36,13 @@
                         <li> <a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a></li>
                     </ul>
                 </address>
+
+                <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg class="" width="32" height="32">
+                        <use href="./images/icons.svg#menu-hamburger"></use>
+                    </svg>
+                </button>
+
             </div>
         </header>
         <main>
@@ -457,6 +457,24 @@
 
         </form>
     </div>
+    <!-- MOBILE MENU -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+        <button class="menu-toggle js-close-menu">
+            <svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                <path fill-rule="evenodd"
+                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                    clip-rule="evenodd"></path>
+            </svg>
+        </button>
+
+        <ul class="mobile-menu">
+            <li><a href="" class="link">About</a></li>
+            <li><a href="" class="link">Products</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+            <li><a href="" class="link">Career</a></li>
+        </ul>
+    </div>
+    <!-- SCRIPTS -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
         crossorigin="anonymous"></script>
