--- a/index.html
+++ b/index.html
@@ -467,12 +467,57 @@
             </svg>
         </button>
 
-        <ul class="mobile-menu">
-            <li><a href="" class="link">About</a></li>
-            <li><a href="" class="link">Products</a></li>
-            <li><a href="" class="link">Contacts</a></li>
-            <li><a href="" class="link">Career</a></li>
-        </ul>
+        <div class="toggle-menu-container">
+            <ul class="mobile-menu">
+                <li><a href="" class="link toggle-menu-active">Studio</a></li>
+                <li><a href="" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
+            </ul>
+
+            <div class="menu-contacts">
+                <ul class="list toggle-menu-contacts">
+                    <li class="toggle-menu-tel">
+                        <a href="tel:+11 (000) 111-11-11" class="link menu-tel
+                                    ">+11 (000) 111-11-11
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="link menu-mail">info@devstudio.com
+
+                        </a>
+                    </li>
+                </ul>
+                <ul class="list footer-social-list">
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <svg class="footer-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#instagram-footer"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item"><a href="" class="footer-social-link">
+                            <svg class="footer-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#twitter-footer"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <svg class="footer-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#facebook-footer"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <svg class="footer-social-icons" width="24" height="24">
+                                <use href="./images/icons.svg#linkedin-footer"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <!-- SCRIPTS -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
