--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         </header>
         <main>
             <!-- HERO -->
-            <section class="hero-section">
-                <div class="hero-block container">
+            <!-- <section class="hero-section">
+                <div class="hero-block">
                     <h1 class="hero-title">Effective Solutions for Your Business</h1>
                     <button type="button" data-modal-open class="modal-button">Order Service</button>
                 </div>
-            </section>
+            </section> -->
             <!-- POSSIBILITIES -->
             <section class="possibilities-section">
                 <div class="flex-block container">
@@ -105,7 +105,7 @@
                 </div>
             </section>
             <!-- WHAT ARE WE DOING -->
-            <section class="section-bottom container">
+            <section class="section-bottom">
                 <div class="section container">
                     <h2 class="section-title">What are we doing</h2>
                     <ul class="list we-are">
@@ -470,8 +470,8 @@
         <div class="toggle-menu-container">
             <ul class="mobile-menu">
                 <li><a href="" class="link toggle-menu-active">Studio</a></li>
-                <li><a href="" class="link">Portfolio</a></li>
-                <li><a href="" class="link">Contacts</a></li>
+                <li><a href="" class="link mobile-menu-link">Portfolio</a></li>
+                <li><a href="" class="link mobile-menu-link">Contacts</a></li>
             </ul>
 
             <div class="menu-contacts">
