--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         </header>
         <main>
             <!-- HERO -->
-            <!-- <section class="hero-section">
+            <section class="hero-section">
                 <div class="hero-block">
                     <h1 class="hero-title">Effective Solutions for Your Business</h1>
                     <button type="button" data-modal-open class="modal-button">Order Service</button>
                 </div>
-            </section> -->
+            </section>
             <!-- POSSIBILITIES -->
             <section class="possibilities-section">
                 <div class="flex-block container">
