--- a/index.html
+++ b/index.html
@@ -109,12 +109,18 @@
                 <div class="section container">
                     <h2 class="section-title">What are we doing</h2>
                     <ul class="list we-are">
-                        <li class="section-bottom-item"><img src="./images/section-01_img-01.jpg" alt="Computer"
-                                width="360"></li>
-                        <li class="section-bottom-item"><img src="./images/section-01_img-02.jpg" alt="Software"
-                                width="360"></li>
-                        <li class="section-bottom-item"><img src="./images/section-01_img-03.jpg" alt="smartphone"
-                                width="360"></li>
+                        <li class="section-bottom-item">
+                            <img srcset="./images/weare/weare-01@1x.jpg 1x, ./images/weare/weare-01@2x.jpg 2x"
+                                src="./images/section-01_img-01.jpg" alt="Computer" width="360">
+                        </li>
+                        <li class="section-bottom-item">
+                            <img srcset="./images/weare/weare-02@1x.jpg 1x, ./images/weare/weare-02@2x.jpg 2x"
+                                src="./images/section-01_img-02.jpg" alt="Software" width="360">
+                        </li>
+                        <li class="section-bottom-item">
+                            <img srcset="./images/weare/weare-03@1x.jpg 1x, ./images/weare/weare-03@2x.jpg 2x"
+                                src="./images/section-01_img-03.jpg" alt="smartphone" width="360">
+                        </li>
                     </ul>
                 </div>
             </section>
@@ -125,9 +131,10 @@
                     <ul class="list team-cards">
                         <!-- CARD-01 -->
                         <li class="team-list">
-                            <img src="./images/section-02_img-01.jpg" alt="Product_Designer" width="264">
+                            <img srcset="./images/team/mark-guerrero@1x.jpg 1x, ./images/team/mark-guerrero@2x.jpg 2x"
+                                src="./images/section-02_img-01.jpg" alt="Product_Designer" width="264">
                             <div class="card-box">
-                                <h3 class="list-title">Mark Guerrero</h3>
+                                <h3 class="team-list-title">Mark Guerrero</h3>
                                 <p class="list-description">Product Designer</p>
                                 <ul class=" list team-social-list">
                                     <li class="team-social-items">
@@ -163,9 +170,10 @@
                         </li>
                         <!-- CARD-02 -->
                         <li class="team-list">
-                            <img src="./images/section-02_img-02.jpg" alt="Frontend_Developer" width="264">
+                            <img srcset="./images/team/tom-ford@1x.jpg 1x, ./images/team/tom-ford@2x.jpg 2x"
+                                src="./images/section-02_img-02.jpg" alt="Frontend_Developer" width="264">
                             <div class="card-box">
-                                <h3 class="list-title">Tom Ford</h3>
+                                <h3 class="team-list-title">Tom Ford</h3>
                                 <p class="list-description">Frontend Developer</p>
                                 <ul class=" list team-social-list">
                                     <li class="team-social-items">
@@ -201,9 +209,10 @@
                         </li>
                         <!-- CARD-03 -->
                         <li class="team-list">
-                            <img src="./images/section-02_img-03.jpg" alt="Marketing" width="264">
+                            <img srcset="./images/team/camila-garcia@1x.jpg 1x, ./images/team/camila-garcia@2x.jpg 2x"
+                                src="./images/section-02_img-03.jpg" alt="Marketing" width="264">
                             <div class="card-box">
-                                <h3 class="list-title">Camila Garcia</h3>
+                                <h3 class="team-list-title">Camila Garcia</h3>
                                 <p class="list-description">Marketing</p>
                                 <ul class=" list team-social-list">
                                     <li class="team-social-items">
@@ -239,9 +248,10 @@
                         </li>
                         <!-- CARD-04 -->
                         <li class="team-list">
-                            <img src="./images/section-02_img-04.jpg" alt="UI_Designer" width="264">
+                            <img srcset="./images/team/daniel-wilson@1x.jpg 1x, ./images/team/daniel-wilson@2x.jpg 2x"
+                                src="./images/section-02_img-04.jpg" alt="UI_Designer" width="264">
                             <div class="card-box">
-                                <h3 class="list-title">Daniel Wilson</h3>
+                                <h3 class="team-list-title">Daniel Wilson</h3>
                                 <p class="list-description">UI Designer</p>
                                 <ul class=" list team-social-list">
                                     <li class="team-social-items">
